--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,14 +40,25 @@ target_include_directories(demo-1 PRIVATE include)
 
 target_link_libraries(demo-1 -lusb-1.0)
 
+add_executable(demo-2
+  src/demos/demo-2.cpp
+  src/sound-map.c
+)
+
+target_include_directories(demo-2 PRIVATE src)
+target_include_directories(demo-2 PRIVATE include)
+
+target_link_libraries(demo-2 -lusb-1.0)
+
 add_executable(demo-3
   src/demos/demo-3.cpp
   src/sound-map-2.cpp
+  src/sound-map.c
   src/usb-dir.c
 )
 
 target_include_directories(demo-3 PRIVATE src)
 target_include_directories(demo-3 PRIVATE include)
 
-target_link_libraries(demo-3)
+target_link_libraries(demo-3 -lusb-1.0)
 
